--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,155 +1,143 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+@import "tailwindcss";
 
-:root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
-	--gray: 96, 115, 159;
-	--gray-light: 229, 233, 240;
-	--gray-dark: 34, 41, 57;
-	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
-	--box-shadow:
-		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
-		rgba(var(--gray), 33%);
-}
-@font-face {
-	font-family: "Atkinson";
-	src: url("/fonts/atkinson-regular.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-@font-face {
-	font-family: "Atkinson";
-	src: url("/fonts/atkinson-bold.woff") format("woff");
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
-body {
-	font-family: "Atkinson", sans-serif;
-	margin: 0;
-	padding: 0;
-	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
-	background-size: 100% 600px;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	color: rgb(var(--gray-dark));
-	font-size: 20px;
-	line-height: 1.7;
-}
-main {
-	width: 720px;
-	max-width: calc(100% - 2em);
-	margin: auto;
-	padding: 3em 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
-	line-height: 1.2;
-}
-h1 {
-	font-size: 3.052em;
-}
-h2 {
-	font-size: 2.441em;
-}
-h3 {
-	font-size: 1.953em;
-}
-h4 {
-	font-size: 1.563em;
-}
-h5 {
-	font-size: 1.25em;
-}
-strong,
-b {
-	font-weight: 700;
-}
-a {
-	color: var(--accent);
-}
-a:hover {
-	color: var(--accent);
-}
-p {
-	margin-bottom: 1em;
-}
-.prose p {
-	margin-bottom: 2em;
-}
-textarea {
-	width: 100%;
-	font-size: 16px;
-}
-input {
-	font-size: 16px;
-}
-table {
-	width: 100%;
-}
-img {
-	max-width: 100%;
-	height: auto;
-	border-radius: 8px;
-}
-code {
-	padding: 2px 5px;
-	background-color: rgb(var(--gray-light));
-	border-radius: 2px;
-}
-pre {
-	padding: 1.5em;
-	border-radius: 8px;
-}
-pre > code {
-	all: unset;
-}
-blockquote {
-	border-left: 4px solid var(--accent);
-	padding: 0 0 0 20px;
-	margin: 0px;
-	font-size: 1.333em;
-}
-hr {
-	border: none;
-	border-top: 1px solid rgb(var(--gray-light));
-}
-@media (max-width: 720px) {
-	body {
-		font-size: 18px;
-	}
-	main {
-		padding: 1em;
-	}
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme  {
+  --font-sans: Geist, sans-serif;
+  --font-mono: Geist mono, monospace;
+  --color-black: #1e1e1e;
+  --color-white: #e7e7d8;
+  --color-eagle: #afac95;
+  --color-orange: #ea4125;
+  --color-gray: #9b9884;
+  /* Gradient */
+--background-image-grid:
+  repeating-linear-gradient(
+    to right,
+    rgba(205, 205, 205, 0.2) 0px,
+    rgba(205, 205, 205, 0.2) 1px,
+    transparent 1px,
+    transparent 6px
+  ),
+  repeating-linear-gradient(
+    to bottom,
+    rgba(205, 205, 205, 0.2) 0px,
+    rgba(205, 205, 205, 0.2) 1px,
+    transparent 1px,
+    transparent 6px
+  );
+
+  /* Keyframes */
+  --animate-marquee: marquee 20s linear infinite;
+  @keyframes marquee {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
 }
 
-.sr-only {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	position: absolute !important;
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
-	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-	clip: rect(1px 1px 1px 1px);
-	/* maybe deprecated but we need to support legacy browsers */
-	clip: rect(1px, 1px, 1px, 1px);
-	/* modern browsers, clip-path works inwards from each corner */
-	clip-path: inset(50%);
-	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
-	white-space: nowrap;
+@keyframes typing {
+
+  0% { content: ""; }
+  2% { content: " "; }
+  4%  { content: " d"; }
+  6%  { content: " da"; }
+  8%  { content: " dat"; }
+  10% { content: " data"; }               /* pause briefly */
+  12% { content: " data "; }
+  14% { content: " data s"; }
+  16% { content: " data sc"; }
+  18% { content: " data sci"; }
+  20% { content: " data scie"; }
+  22% { content: " data scien"; }
+  24% { content: " data scient"; }
+  26% { content: " data scienti"; }
+  28% { content: " data scientis"; }
+  30% { content: " data scientist"; }  
+  45% { content: " data scientist"; }     /* full word */
+  46% { content: " data scientis"; }
+  47% { content: " data scienti"; }
+  48% { content: " data scient"; }
+  49% { content: " data scien"; }
+  50% { content: " data scie"; }
+  51% { content: " data sci"; }
+  52% { content: " data sc"; }
+  53% { content: " data s"; }
+  54% { content: " data "; }
+  55% { content: " data"; }
+  56% { content: " dat"; }
+  57% { content: " da"; }
+  58% { content: " d"; }
+  59% { content: " "; }
+  60% { content: ""; }                                      /* pause before next word */
+  64% { content: "n"; }
+  66% { content: "n e"; }
+  68% { content: "n en"; }
+  70% { content: "n eng"; }
+  72% { content: "n engi"; }
+  74% { content: "n engin"; }
+  76% { content: "n engine"; }
+  78% { content: "n enginee"; }
+  80% { content: "n engineer"; }         /* full phrase */       /* pause */
+  89% { content: "n engineer"; }         /* full phrase */       /* pause */
+  90% { content: "n enginee"; }
+  91% { content: "n engine"; }
+  92% { content: "n engin"; }
+  93% { content: "n engi"; }
+  94% { content: "n eng"; }
+  95% { content: "n en"; }
+  96%{ content: "n e"; }
+  97%{ content: "n "; }
+  98%{ content: "n"; }
+  99%{ content: ""; }
+}
+
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
+}
+
+.typewriter {
+  --caret: currentcolor;
+}
+
+.typewriter::before {
+  content: "";
+  animation: typing 10s infinite;
+}
+
+.typewriter::after {
+  content: "";
+  border-right: 1px solid var(--caret);
+  animation: blink 0.5s linear infinite;
+}
+
+.typewriter.thick::after {
+  border-right: 1ch solid var(--caret);
+}
+
+.typewriter.nocaret::after {
+  border-right: 0;
+}
+
+
+@media (prefers-reduced-motion) {
+  .typewriter::after {
+    animation: none;
+  }
+  
+  @keyframes sequencePopup {
+    0%, 100% { content: "developer"; }
+    25% { content: "writer"; }
+    50% { content: "reader"; }
+    75% { content: "human"; }
+  }
+
+  .typewriter::before {
+    content: "developer";
+    animation: sequencePopup 12s linear infinite;
+  }
 }
