Minor cosmetic changes

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -16,11 +16,13 @@ import ThemeToggle from '../assets/ThemeToggle.astro';
       href="https://github.com/inarticulatus"
       class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange md:ml-auto lg:w-fit px-2 py-4  text-white text-center text-xs uppercase"
       >Github</a
-    ><a
+    >
+    <!-- <a
       href="#"
       class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-white lg:w-fit px-2 py-4 text-black hover:text-white text-center text-xs uppercase"
-      >Blog</a
-    ><a
+      >Blog
+    </a> -->
+    <a
       href="about"
       class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-white lg:w-fit px-2 py-4 text-black hover:text-white text-center text-xs uppercase"
       >About</a
