--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -16,7 +16,7 @@ import BgGrid from "../assets/BgGrid.astro";
     <div class="p-8">
     <p class="text-white font-black uppercase lg:text-2xl">
       As a data scientist and engineer I specialize in optimization, embedded machine learning, and decision intelligence.
-      I build data pipelines and models that connect and optimize real-world systems from IoT telemetry to airfoil design with mathematical precision.
+      I build data pipelines and models that connect and optimize real-world systems; <br> from IoT telemetry to airfoil design with mathematical precision.
     </p>
   </div>
   
