--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -23,7 +23,7 @@ import ThemeToggle from '../assets/ThemeToggle.astro';
       >Blog
     </a> -->
     <a
-      href="about"
+      href="/about/"
       class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-white lg:w-fit px-2 py-4 text-black hover:text-white text-center text-xs uppercase"
       >About</a
     >
