--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,22 +3,27 @@
 import BgGrid from "../assets/BgGrid.astro";
 ---
 
-<section class="border-white/20 border-b">
-  <div class="bg-grid p-8 relative">
+<section class="border-black/20 border-b divide-y divide-black/20">
+  <div class="p-8 relative">
     <BgGrid />
     <!-- <Banner /> -->
     <h1
-      class="text-white tracking-tighter font-black uppercase text-3xl md:text-5xl lg:text-8xl relative"
-    >
-      Hi! I am <span class="bg-orange">Utkarsh Tripathi</span>, <br> A<span class="typewriter"></span>. 
+      class="text-black/70 tracking-tighter font-black uppercase text-3xl md:text-5xl lg:text-8xl relative leading-[1.2]">
+      Hello!
+      <br>
+      I'm <span class="bg-orange px-4 text-white">Utkarsh Tripathi</span>
+      <br>
+      A <span class="text-orange">Data</span> <span class="typewriter text-orange"></span>.
     </h1>
   </div>
-    <div class="p-8">
-    <p class="text-white font-black uppercase lg:text-2xl">
-      I specialize in optimization, embedded machine learning, and decision intelligence.
-      I build data pipelines and models that connect and optimize real-world systems; <br> from IoT telemetry to airfoil design with mathematical precision.
+  <div class="p-8">
+    <p class="text-black/80 font-black uppercase lg:text-2xl">
+      I build scalable data pipelines, ML systems, and analytics platforms;
+      <br>
+      blending data engineering and data
+      science to turn raw data into actionable insights.
     </p>
   </div>
-  
+
   <!-- <Testimonials /> -->
 </section>
