--- a/src/components/assets/Timeline.astro
+++ b/src/components/assets/Timeline.astro
@@ -2,10 +2,11 @@
   <div class="group flex gap-x-6">
     <div class="relative">
       <div class="absolute left-1/2 top-0 h-full w-0.5 -translate-x-1/2 bg-eagle"></div>
-      <span class="relative z-10 grid h-3 w-3 place-items-center rounded-full bg-white"></span>
-    </div>
+        <span class="relative z-10 grid h-3 w-3 place-items-center border-eagle border rounded-full bg-eagle"></span>
+      </div>
     <div class="-translate-y-1.5 pb-8 text-slate-600">
       <slot></slot>
     </div>
   </div>
 </div>
+
