--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -2,29 +2,29 @@
 import ThemeToggle from '../assets/ThemeToggle.astro';
 ---
 
-<div class="border-white/20 border-b justify-center w-full py-8 px-4">
+<div class="border-black/20 border-b justify-center w-full p-8">
   <div
     class="text-center items-center w-full flex flex-col justify-between md:p-2 md:flex-row"
   >
     <a
       href="/"
-      class="text-white font-black uppercase tracking-tight text-xl p-4 md:p-0"
-      ><span>UTKARSH TRIPATHI</span>
+      class="text-black font-black uppercase tracking-tight text-xl p-4 md:p-0"
+      ><span class="text-black  p-2">UTKARSH TRIPATHI</span>
     </a>
     <div>
     <a
-      href="https://github.com/inarticulatus"
-      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange md:ml-auto lg:w-fit px-2 py-4  text-white text-center text-xs uppercase"
-      >Github</a
+      href="/projects/"
+      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange md:ml-auto lg:w-fit px-2 py-4  text-black text-center text-sm uppercase"
+      >Projects & Research</a
     >
     <!-- <a
       href="#"
-      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-white lg:w-fit px-2 py-4 text-black hover:text-white text-center text-xs uppercase"
+      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-black lg:w-fit px-2 py-4 text-black hover:text-black text-center text-xs uppercase"
       >Blog
     </a> -->
     <a
       href="/about/"
-      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-white lg:w-fit px-2 py-4 text-black hover:text-white text-center text-xs uppercase"
+      class="w-full duration-200 font-black hover:underline hover:decoration-5 hover:decoration-orange text-black lg:w-fit px-2 py-4 text-black hover:text-black text-center text-sm uppercase"
       >About</a
     >
     </div>
