--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,17 +2,21 @@
 import BaseHead from "../components/BaseHead.astro";
 import Navigation from "../components/global/Navigation.astro";
 import Footer from "../components/global/Footer.astro";
+import CTA from "../components/landing/CTA.astro";
 ---
 
-<html lang="en" class="selection:bg-orange selection:text-white">
+<html lang="en" class="selection:bg-orange selection:text-black">
   <head>
     <BaseHead />
   </head>
   <body
-    class="mx-auto bg-gray max-w-7xl border-x border-white/20 2xl:max-w-7xl"
+    class="mx-auto bg-white max-w-7xl border-x border-black/10 2xl:max-w-7xl text-black"
   >
     <Navigation />
+    <div class="min-h-[80dvh]">
     <slot />
+    </div>
     <Footer />
   </body>
 </html>
+
