feat: Allow projects to have multiple categories, update display and filtering logic, and switch RSS feed to projects.

--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -3,7 +3,10 @@ import SectionTitle from "../assets/SectionTitle.astro";
 import { getCollection } from "astro:content";
 
 const posts = await getCollection('projects', ({ data }) => {
-return data.category == 'data-engineering'
+const categories = Array.isArray(data.category)
+? data.category.map(c => c.toLowerCase())
+: [data.category.toLowerCase()];
+return categories.includes('project') || categories.includes('projects');
 });
 const limitedEntries = posts.slice(0, 2);
 ---
